perf: neuron-outer loop blocking, per-thread workspaces, SIMD dot/axpy via Vector API (1.4k -> 11k tok/s)